<resources>
    <string name="app_name">movietuvi</string>
    <string name="title_activity_account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">QUIT</string>
    <string name="picturesmile">picturesmile</string>
    <string name="username">USERNAME</string>
    <string name="welcome_screen">welcome</string>
    <string name="title_activity_object">object</string>
    <string name="bunny">bunny</string>
    <string name="action_quit">Quit</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">country</string>
    <string name="edit_profile_phone">phone no</string>
    <string name="edit_profile_hobby">Hobbies</string>
    <string name="edit_profile_birthdate">MM/DD/YYYY</string>
    <string name="edit_profile_gender">GENDER</string>
    <string name="select_date">D-O-B</string>
    <string name="save_edit">save</string>
    <string name="back_edit">BACK</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="title_activity_cube3_d">Cube3D</string>
    <string name="title_activity_cube3d">Cube3d</string>
    <string name="title_activity_forgot">forgot</string>
    <string name="title_activity_setting">setting</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Sending your msg to the team</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="title_activity_about">about</string>
    <string name="title_activity_chat">chat</string>
    <string name="logout">logout</string>
    <string name="back">Return</string>
    <string name="title_activity_sensor">sensor</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_aboutm">aboutm</string>
    <string name="title_activity_speech">speech</string>
    <string name="title_activity_camera">camera</string>
    <string name="name1">Anubhav Choudhary</string>
    <string name="name2">Bradey Gracia</string>
    <string name="name3">Malin Lomax</string>
    <string name="quote1">"The future belongs to those who learn more skills and combine them in creative ways." ― Robert Greene, Mastery</string>
    <string name="quote2">"A successful man is one who can lay a firm foundation with the bricks others have thrown at him." -David Brinkley</string>
    <string name="quote3">"The journey of a thousand miles begins with one step". - Lao Tzu</string>
    <string name="camera_btn1">Share</string>
    <string name="camera_btn2">Camera</string>
    <string name="camera_btn3">Gallery</string>
    <string name="enter_pass">Enter a new Password</string>
    <string name="change_btn1">Change</string>
    <string name="hello_message">Hello World!</string>
    <string name="share">Share</string>
    <string name="forgot_email">Input Email</string>
    <string name="send_email">Send email</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Sign In</string>
    <string name="login_message">Remember me</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_forgotpassword">forgot password</string>
    <string name="max_acceleration">Max Acceleration:</string>
    <string name="max_acceleration_x_axis">Max Acceleration: X-Axis</string>
    <string name="max_acceleration_x_value">0.0</string>
    <string name="max_acceleration_y_axis">Max Acceleration: Y-Axis</string>
    <string name="max_acceleration_y_value">0.0</string>
    <string name="max_acceleration_z_axis">Max Acceleration: Z-Axis</string>
    <string name="max_acceleration_z_value">0.0</string>
    <string name="current_acceleration">Current Acceleration:</string>
    <string name="x_axis">X-Axis</string>
    <string name="x_value">0.0</string>
    <string name="y_axis">Y-Axis</string>
    <string name="y_value">0.0</string>
    <string name="z_axis">Z-Axis</string>
    <string name="z_value">0.0</string>
    <string name="settings_password_change">password change</string>
    <string name="settings_deactivate_account">Deactivate Account</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_about_us">About us</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_choose">Choose</string>
    <string name="signup_upload">Upload</string>
    <string name="sign_up">Sign Up</string>
    <string name="speech_sharetext">Share Text</string>
    <string name="weather_change_city">Change City</string>
    <string name="profile_name">ZYAN</string>
    <string name="profile_country">Canada, ontario</string>
    <string name="profile_email">Email</string>
    <string name="profile_gender">GENDER</string>
    <string name="profile_phonenumber">Phone</string>
    <string name="profile_hobby">HOBBY</string>
    <string name="profile_date_of_birth">Date Of Birth</string>
    <string name="action_signout">SIGNOUT</string>
    <string name="action_info">Info</string>
    <string name="drawer_import">Import</string>
    <string name="drawer_speech">Speech</string>
    <string name="drawer_tools">Tools</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="drawer_2d_object">2D OBJECT</string>
    <string name="drawer_3d_object">3D OBJECT</string>
    <string name="drawer_user_s_hub">User\'s Hub</string>
    <string name="drawer_weather">Weather</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="accelerometer_light">Light</string>
    <string name="menu_proximity">Proximity</string>
    <string name="camera">Camera</string>
    <string name="Camera12">Camera</string>


</resources>
