<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="38.40dp"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".editinfo">


    <EditText
        android:id="@+id/profile_name"
        android:layout_width="295dp"
        android:layout_height="42dp"

        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_profile_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_hobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_country"
        android:layout_width="302dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_profile_country"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_hobby" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="304dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:hint="@string/edit_profile_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_country" />

    <EditText
        android:id="@+id/profile_hobby"
        android:layout_width="304dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:hint="@string/edit_profile_hobby"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <EditText
        android:id="@+id/profile_birth"
        android:layout_width="306dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:hint="MM/DD/YYYY"
        android:inputType="date"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/profile_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone" />


    <EditText
        android:id="@+id/profile_gender"
        android:layout_width="308dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:hint="Gender"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/Return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_birth" />

    <Button
        android:id="@+id/Return"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimaryDark"

        android:padding="12sp"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimaryDark"
        android:padding="12sp"
        android:text="@string/save_edit"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Return"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender" />


</android.support.constraint.ConstraintLayout>